force-app/main/default/objects/ccrz__E_TransactionPayment__c/ccrz__E_TransactionPayment__c.object-meta.xml
<CustomObject>
    <description>Transaction payments represent payments made to the system.</description>
    <label>CC Transaction Payment</label>
    <nameField>
        <displayFormat>TP-{0000000000}</displayFormat>
        <label>CC Transaction Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Transaction Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>