force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountNumber__c</fullName>
    <description>Account number of the payment.  For credit cards, etc. this is the last 4. For things like PO this would be the entire PO number.</description>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>