force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__AccountType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountType__c</fullName>
    <description>The account type of the payment, e.g. PO, Credit Card, etc.</description>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>