force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__Amount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Amount__c</fullName>
    <description>Actual transaction amount.  Could be different than the requested amount.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>