force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__BillTo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BillTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account against which this transaction payment applies, e.g. the Bill To of the invoice.</description>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bill To Transaction Payments</relationshipLabel>
    <relationshipName>BillToTransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>