force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__CCSubscription__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The cc subscription that this transaction applies to</description>
    <label>CC Subscription</label>
    <referenceTo>ccrz__E_Subscription__c</referenceTo>
    <relationshipLabel>CC Transaction Payments</relationshipLabel>
    <relationshipName>TransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>