force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__Contact__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact of the user that created this transaction payment.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CC Transaction Payments</relationshipLabel>
    <relationshipName>TransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>