force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__ExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExpirationMonth__c</fullName>
    <description>The expiration month of the payment type, e.g. the Credit Card expiration month.</description>
    <label>Expiration Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>