force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__ExpirationYear__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExpirationYear__c</fullName>
    <description>The expiration year of the payment type, e.g. for Credit Card this would be the expiration year.</description>
    <label>Expiration Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>