force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__InvoiceAppliedFor__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InvoiceAppliedFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice this payment was made for (optional).  In a summary invoice case this is the summary invoice.  For non-summary invoices this will be the same as the InvoiceAppliedTo field.</description>
    <label>Invoice Applied For</label>
    <referenceTo>ccrz__E_Invoice__c</referenceTo>
    <relationshipLabel>CC Transaction Payments For</relationshipLabel>
    <relationshipName>TransactionPaymentsFor</relationshipName>
    <type>Lookup</type>
</CustomField>