force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PaymentType__c</fullName>
    <description>Account specific sub-type of the account type, e.g. for Credit Card this would be the card type.</description>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>