force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__RequestAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RequestAmount__c</fullName>
    <description>Requested amount of the transaction.</description>
    <label>Request Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>