force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__SoldTo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account to which the original invoice or order was applied, e.g. the Sold To of the invoice or the Ship To of the order.</description>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sold To Transaction Payments (Sold To)</relationshipLabel>
    <relationshipName>SoldToTransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>