force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__SubAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubAccountNumber__c</fullName>
    <description>Sub-account number to be used in addition to the account number.</description>
    <label>Sub Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>