force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__TransactionCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TransactionCode__c</fullName>
    <description>Code associated with the transaction.  For example, for a credit card this would be the specific transaction returned from a payment.</description>
    <label>Transaction Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>