force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__TransactionPaymentId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TransactionPaymentId__c</fullName>
    <description>External id used for data loading or other access</description>
    <externalId>true</externalId>
    <label>Transaction Payment Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>