force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__TransactionSubcode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TransactionSubcode__c</fullName>
    <description>Used when a secondary code is required for the transaction.  For example, if the transaction failed this might contain the error code.</description>
    <label>Transaction Subcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>