force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__TransactionType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TransactionType__c</fullName>
    <description>Type of the transaction, e.g. for a credit card this might be AUTH, CAPTURE, or AUTH+CAPTURE.  This is provider specific.</description>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>