force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__User__c.field-meta.xml
<CustomField>
    <fullName>ccrz__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that created this transaction payment.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>