force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__VerificationCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__VerificationCode__c</fullName>
    <description>Secondary transaction code.</description>
    <label>Verification Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>